@@ -1,7 +1,7 @@
 
 # The R Commander and command logger
 
-# last modified 2019-11-26 by John Fox
+# last modified 2019-12-26 by John Fox
 
 # contributions by Milan Bouchet-Valat, Richard Heiberger, Duncan Murdoch, Erich Neuwirth, Brian Ripley, Vilmantas Gegzna
 
@@ -1038,8 +1038,12 @@ setupGUI <- function(Menus){
     tkadd(notebook, logFrame, text=gettextRcmdr("R Script"), padding=6)
     if (getRcmdr("use.markdown")) tkadd(notebook, RmdFrame, text=gettextRcmdr("R Markdown"), padding=6)
     if (getRcmdr("use.knitr")) tkadd(notebook, RnwFrame, text=gettextRcmdr("knitr Document"), padding=6)
-    tkgrid(notebook, sticky="news")
-    if (.log.commands && .console.output) tkgrid(submitButton, sticky="w", pady=c(0, 6))
+    # tkgrid(notebook, sticky="news")
+    if (.log.commands) {
+        tkgrid(notebook, sticky="news")
+    }
+#    if (.log.commands && .console.output) tkgrid(submitButton, sticky="w", pady=c(0, 6))
+    if (.log.commands && .console.output) tkgrid(submitButton, sticky="e", pady=c(0, 6), padx=c(0, 6))
     tkgrid(labelRcmdr(outputFrame, text=gettextRcmdr("Output"), font="RcmdrOutputMessagesFont", foreground=getRcmdr("title.color")),
            if (.log.commands && !.console.output) submitButton, sticky="sw", pady=c(6, 6))
     tkgrid(.output, outputYscroll, sticky="news", columnspan=2)
@@ -1063,7 +1067,9 @@ setupGUI <- function(Menus){
     .commander <- CommanderWindow()
     tkgrid.rowconfigure(.commander, 0, weight=0)
     tkgrid.rowconfigure(.commander, 1, weight=1)
-    tkgrid.rowconfigure(.commander, 2, weight=1)
+#    tkgrid.rowconfigure(.commander, 2, weight=1)
+    w <- if (.log.commands && !.console.output) 1 else 0
+    tkgrid.rowconfigure(.commander, 2, weight=w)
     tkgrid.columnconfigure(.commander, 0, weight=1)
     tkgrid.columnconfigure(.commander, 1, weight=0)
     if (.log.commands){
